--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -2,9 +2,9 @@
     text-align: center;
 }
 .title{
-    margin-top: 50px;
+    margin-top: 20px;
     color:aliceblue;
-    font-size: 60px;
+    font-size: 27px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,8 +14,8 @@
     padding-left: 15px;
 }
 .reset{
-    width: 250px;
-    height: 100px;
+    width: 100px;
+    height: 40px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -23,30 +23,31 @@
     background: #1f3540;
     font-size: 26px;
     color: aquamarine;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 .boxes{
     display: flex;
-    height: 180px;
-    width: 180px;
+    height: 120px;
+    width: 120px;
     background: #1f3540;
     border: 4px solid #0f1b21;
     border-radius: 12px;
     cursor: pointer;
 }
 .board{
-    height: 600px;
-    width: 564px;
+    height: 370px;
+    width: 400px;
     display: flex;
     margin: auto;
 }
 .boxes img{
-    margin: 50px 50px;
+    margin: 20px 20px;
 }
 .title img{
-    height: 100px;
-    width: 100px;
-    padding: 20px 20px;
-    height: 50px;
+    padding-left: 4px;
+    height: 40px;
+    width: 40px;
+    
+
 }
